Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74004

qmake generates an error file from .pro to .vcxproj

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.12.3, 5.14.0 Alpha
    • 5.12.0
    • Build tools: qmake
    • None
    • Windows 10 Enterprise
    • Windows
    • b0dcb94d9462f38e36c15ddec64e5eb0a04630a4 (qt/qtbase/5.12)

    Description

      set TRANSLATIONS and CONFIG +=  lrelease embed_translations at the same time in the .pro file.

      then qmake -t vcapp xxxx.pro

      the generated .vcxproj.filter is error. 

      content:

      <ItemGroup>
       <CustomBuild Include="..\xxx.ts">
       <Filter>Translation Files</Filter>
       </CustomBuild>
       </ItemGroup>
      ...
       <ItemGroup>
       <CustomBuild Include="..\xxx.ts">
       <Filter>lrelease</Filter>
       </CustomBuild>
       </ItemGroup>

       

      Two filters have the same ts file. It leads that the vcxproj file can not be loaded

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            dreamychi PanHe
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes